<resources>
    <string name="app_name">GetShowroom</string>
    <string name="title_activity_fragment">FragmentActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="city">Город</string>
    <string name="region">Район</string>
    <string name="street">Улица</string>
    <string name="underground_station">Станция метро</string>
    <string name="price">По цене</string>
    <string name="work_time">Время работы</string>
    <string name="reviews">Отзывы</string>

    <string name="rools_to_use">
        Перед	использованием		мобильного	приложения	GetShowroom,	пожалуйста,	ознакомьтесь	с
нижеследующими	условиями.	Использование	услуг	мобильного	приложения	GetShowroom в	любой	их
части	означает	ваше	безоговорочное	согласие	с	этими	условиями	и	правилами.
Настоящее	 соглашение	 рассматривается,	 как	 публичная	 оферта	 в	 соответствии	 со	 ст.	 437	 Гражданского
кодекса	Российской	Федерации. \n\n
Если	 вы	 не	 согласны	 с	 положениями	 настоящего	 соглашения,	 не	 используйте	 мобильного	 приложения
GetShowroom в	любом	виде	и	для	любых	целей.\n\n
1.Общие	положения\n\n
1.1.	Настоящее	Пользовательское	соглашение (далее	— «Соглашение»)	устанавливает	условия
использования	программного	обеспечения «GetShowroom»	для	мобильных	устройств	(далее	—
«Программа»).\n\n
1.2.	Программа предназначена	для осуществления	поиска	шоу-румов.	Программа работает	через	сервер
GetShowroom и распространяется	бесплатно	по принципу «как	есть» (as is).	 GetShowroom оставляет
за собой	право	автоматически	обновлять	Программу с выходом	свежих	версий.
Под	термином	«шоу-рум»	для	целей	настоящего	Соглашения	понимаются	магазины-ателье,	и/или
компании-студии,	в	которых	представлен	и	продается	товар	(одежда/ обувь/ аксессуары/	автомобили/
мебель/	иные	вещи)	 одного	или	нескольких	дизайнеров	(обычно	в	розницу),	и/или	иные	помещения/
организации,	обычно	относящиеся	к	типу	шоу-румов.\n\n
1.3.	Копируя	Программу,	устанавливая	её	на	свое	мобильное	устройство	или	используя	Программу	любым
образом,	Пользователь	выражает	свое	полное	и	безоговорочное	согласие	со	всеми	условиями	Соглашения.\n\n
1.4.	Использование	Программы	разрешается	только	на	условиях	настоящей Соглашения.	Если	Пользователь
не	принимает	условия	Соглашения в	полном	объёме,	Пользователь	не	имеет	права	использовать
Программу	в	каких-либо	целях.	Использование	Программы	с	нарушением	(невыполнением)	какого-либо	из
условий	Соглашения запрещено.\n\n
1.6.	Программа не продается,	а предоставляется	в пользование	бесплатно.	Ввиду	безвозмездности
Программы	нормы	о защите	прав	потребителей	не могут	быть	к нему	применимыми.	В случае	если
пользованию	Программы будет	придан	возмездный	характер,	в него	будут	внесены	соответствующие
изменения	в целях	соблюдения	указанных	норм.\n\n
1.7.	Регистрация	(создание	аккаунта)	и	использование	Программы	производится	с	использованием	номера
мобильного	 телефона	 Пользователя.	 При	 удалении	 Пользователем	 Программы	 из	 памяти	 мобильного
устройства	 Пользователя	 персональная	 информация	 Пользователя,	 полученная	 GetShowroom в	 процессе
авторизации	с	использованием	номера	мобильного	телефона	Пользователя	в	Программе	и	использования
Программы,	сохраняется	на	сервере	GetShowroom.	В	случае,	если	Программа	повторно	устанавливается	на
устройство	и	производится	регистрация	с	использованием	в	качестве	идентификатора	того	же	самого	номера
мобильного	 телефона,	 персональная	 информация	 Пользователя,	 которая	 была	 предоставлена	 с
использованием	указанного	номера	мобильного	телефона	восстанавливается	в	полном	объеме.
Пользователь	может	в	любой	момент	удалить	свою	персональную	информацию	(аккаунт)	из	Программы	и
сервера	GetShowroom.	При	этом	он	несет	полную	ответственность	за	закрытие	и	удаление	своего	аккаунта.
При	аннулировании	аккаунта	все	данные	из	этого	аккаунта	будут	удалены	и	восстановлению	не	подлежат.\n\n
1.8.	Настоящее	Соглашение	может	изменяться	GetShowroom в	одностороннем	порядке без какого-
либо специального	уведомления.	Изменения	в	условиях	Cоглашения	вступают	в	силу	с	даты	их	публикации
в	Программе,	если	иное	не	оговорено	в	соответствующей	публикации.\n\n
1.9.	Настоящее	Соглашение	и	все	отношения,	связанные	с	использованием	Программы,	регулируются
Законодательством	РФ.</string>
    <string name="title_activity_rools_to_use_app">RoolsToUseApp</string>
</resources>
